--- a/.env
+++ b/.env
@@ -2,5 +2,7 @@ tedious_userName=galbo
 tedious_password=gbAUlr92
 tedious_server=recipe-server1.database.windows.net
 tedious_database=recipes
+#bcrypt_saltRounds=11
+#PORT=3000
 COOKIE_SECRET=abc
 spooncular_apiKey=
