--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ tedious_database=recipes
 #bcrypt_saltRounds=11
 #PORT=3000
 COOKIE_SECRET=abc
-spooncular_apiKey=
+spooncular_apiKey=6487152daff5446e85b103036b04c23b
