--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ tedious_userName=galbo
 tedious_password=gbAUlr92
 tedious_server=recipe-server1.database.windows.net
 tedious_database=recipes
-#bcrypt_saltRounds=11
-#PORT=3000
+bcrypt_saltRounds=11
+PORT=3000
 COOKIE_SECRET=abc
 spooncular_apiKey=6487152daff5446e85b103036b04c23b
